# msgpacker

./: Cargo.toml  README.md
msgpacker/: Cargo.toml
msgpacker-bench/: Cargo.toml
msgpacker-bench/benches/: msgpacker.rs
msgpacker-bench/html/pack int/msgpacker/base/: estimates.json
msgpacker-bench/html/pack int/msgpacker/new/: benchmark.json  raw.csv  sample.json  tukey.json
msgpacker-bench/html/pack int/msgpacker/report/: index.html
msgpacker-bench/html/pack int/report/: index.html
msgpacker-bench/html/pack int/rmps/base/: estimates.json  sample.json
msgpacker-bench/html/pack int/rmps/new/: benchmark.json  raw.csv  tukey.json
msgpacker-bench/html/pack int/rmps/report/: index.html
msgpacker-bench/html/pack int/rmpv/base/: estimates.json  raw.csv  tukey.json
msgpacker-bench/html/pack int/rmpv/new/: benchmark.json  sample.json
msgpacker-bench/html/pack int/rmpv/report/: index.html
msgpacker-bench/html/pack map[100]/msgpacker/base/: benchmark.json  estimates.json
msgpacker-bench/html/pack map[100]/msgpacker/new/: raw.csv  sample.json  tukey.json
msgpacker-bench/html/pack map[100]/msgpacker/report/: index.html
msgpacker-bench/html/pack map[100]/report/: index.html
msgpacker-bench/html/pack map[100]/rmps/base/: benchmark.json  estimates.json  raw.csv  sample.json  tukey.json
msgpacker-bench/html/pack map[100]/rmps/report/: index.html
msgpacker-bench/html/pack map[100]/rmpv/base/: benchmark.json  estimates.json
msgpacker-bench/html/pack map[100]/rmpv/new/: raw.csv  sample.json  tukey.json
msgpacker-bench/html/pack map[100]/rmpv/report/: index.html
msgpacker-bench/html/pack map[10]/msgpacker/base/: sample.json  tukey.json
msgpacker-bench/html/pack map[10]/msgpacker/new/: benchmark.json  estimates.json  raw.csv
msgpacker-bench/html/pack map[10]/msgpacker/report/: index.html
msgpacker-bench/html/pack map[10]/report/: index.html
msgpacker-bench/html/pack map[10]/rmps/base/: benchmark.json  estimates.json
msgpacker-bench/html/pack map[10]/rmps/new/: raw.csv  sample.json  tukey.json
msgpacker-bench/html/pack map[10]/rmps/report/: index.html
msgpacker-bench/html/pack map[10]/rmpv/base/: benchmark.json  estimates.json  sample.json
msgpacker-bench/html/pack map[10]/rmpv/new/: raw.csv  tukey.json
msgpacker-bench/html/pack map[10]/rmpv/report/: index.html
msgpacker-bench/html/pack map[1]/msgpacker/base/: benchmark.json  estimates.json  raw.csv  sample.json
msgpacker-bench/html/pack map[1]/msgpacker/new/: tukey.json
msgpacker-bench/html/pack map[1]/msgpacker/report/: index.html
msgpacker-bench/html/pack map[1]/report/: index.html
msgpacker-bench/html/pack map[1]/rmps/base/: benchmark.json  estimates.json  raw.csv  tukey.json
msgpacker-bench/html/pack map[1]/rmps/new/: sample.json
msgpacker-bench/html/pack map[1]/rmps/report/: index.html
msgpacker-bench/html/pack map[1]/rmpv/base/: tukey.json
msgpacker-bench/html/pack map[1]/rmpv/new/: benchmark.json  estimates.json  raw.csv  sample.json
msgpacker-bench/html/pack map[1]/rmpv/report/: index.html
msgpacker-bench/html/pack map[5]/msgpacker/base/: raw.csv  sample.json
msgpacker-bench/html/pack map[5]/msgpacker/new/: benchmark.json  estimates.json  tukey.json
msgpacker-bench/html/pack map[5]/msgpacker/report/: index.html
msgpacker-bench/html/pack map[5]/report/: index.html
msgpacker-bench/html/pack map[5]/rmps/base/: benchmark.json  estimates.json  tukey.json
msgpacker-bench/html/pack map[5]/rmps/new/: raw.csv  sample.json
msgpacker-bench/html/pack map[5]/rmps/report/: index.html
msgpacker-bench/html/pack map[5]/rmpv/base/: estimates.json  raw.csv  tukey.json
msgpacker-bench/html/pack map[5]/rmpv/new/: benchmark.json  sample.json
msgpacker-bench/html/pack map[5]/rmpv/report/: index.html
msgpacker-bench/html/pack nil/msgpacker/base/: estimates.json  sample.json
msgpacker-bench/html/pack nil/msgpacker/new/: benchmark.json  raw.csv  tukey.json
msgpacker-bench/html/pack nil/msgpacker/report/: index.html
msgpacker-bench/html/pack nil/report/: index.html
msgpacker-bench/html/pack nil/rmps/base/: benchmark.json  estimates.json  sample.json
msgpacker-bench/html/pack string[100m]/report/: index.html
msgpacker-bench/html/pack string[10m]/report/: index.html
msgpacker-bench/html/pack string[1m]/report/: index.html
msgpacker-bench/html/report/: index.html
msgpacker-bench/html/unpack int/report/: index.html
msgpacker-bench/html/unpack map[100]/report/: index.html
msgpacker-bench/html/unpack map[10]/report/: index.html
msgpacker-bench/html/unpack map[1]/report/: index.html
msgpacker-bench/html/unpack map[5]/report/: index.html
msgpacker-bench/html/unpack nil/report/: index.html
msgpacker-bench/html/unpack ref map[100]/report/: index.html
msgpacker-bench/html/unpack ref map[10]/report/: index.html
msgpacker-bench/html/unpack ref map[1]/report/: index.html
msgpacker-bench/html/unpack ref map[5]/report/: index.html
msgpacker-bench/html/unpack ref string[100m]/report/: index.html
msgpacker-bench/html/unpack ref string[10m]/report/: index.html
msgpacker-bench/html/unpack ref string[1m]/report/: index.html
msgpacker-bench/html/unpack string[100m]/report/: index.html
msgpacker-bench/html/unpack string[10m]/report/: index.html
msgpacker-bench/html/unpack string[1m]/report/: index.html
msgpacker-bench/src/: lib.rs
msgpacker-derive/: Cargo.toml
msgpacker-derive/src/: lib.rs
msgpacker/src/: binary.rs  buffer.rs  consts.rs  error.rs  extension.rs  float.rs  format.rs  helpers.rs  integer.rs  lib.rs  map.rs  message.rs  message_ref.rs  packer.rs
msgpacker/src/extension/: extension_ref.rs
msgpacker/src/map/: map_ref.rs
msgpacker/src/pack/: binary.rs  collections.rs  common.rs  float.rs  int.rs  mod.rs
msgpacker/src/packer/: impls.rs
msgpacker/src/serde/: deserializer.rs  mod.rs  serializer.rs
msgpacker/src/unpack/: binary.rs  collections.rs  common.rs  float.rs  int.rs  mod.rs
msgpacker/tests/: binary.rs  collections.rs  common.rs  float.rs  int.rs  pack_unpack.rs  serde.rs
msgpacker/tests/utils/: mod.rs
(+364 files in other folders)
