[package]
name = "msgpacker"
version = "0.1.5"
authors = ["Victor Lopez <victor@codx.io>"]
categories = ["compression", "encoding", "parser-implementations"]
edition = "2021"
keywords = ["messagepack", "msgpack"]
license = "MIT/Apache-2.0"
readme = "README.md"
repository = "https://github.com/codx-dev/msgpacker"
description = "MessagePack protocol implementation for Rust."

[dependencies]

[dev-dependencies]
criterion = "0.3"

[profile.bench]
lto = true
incremental = false
codegen-units = 1

[[bench]]
name = "pack"
harness = false
