[package]
name = "msgpacker-bench"
version = "0.0.0"
authors = ["Victor Lopez <victor@codx.io>"]
edition = "2021"
repository = "https://github.com/codx-dev/msgpacker"
description = "Benchmarks for msgpacker."
publish = false

[dependencies]
msgpacker = { path = "../msgpacker" }
rmp-serde = "1.1"
serde = { version = "1.0", features = ["derive"] }
rand = "0.8"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "msgpacker"
harness = false
