[package]
name = "msgpacker-bench"
version = "0.0.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Benchmarks for msgpacker."
publish = false

[dependencies]
msgpacker = { path = "../msgpacker" }
rmp-serde = "1.3"
serde = { version = "1.0", features = ["derive"] }
rand = "0.8"

[dev-dependencies]
criterion = { version = "0.8", features = ["html_reports"] }

[[bench]]
name = "msgpacker"
harness = false
