[package]
name = "msgpacker-derive"
version = "0.3.0"
authors = ["Victor Lopez <victor@codx.io>"]
categories = ["compression", "encoding", "parser-implementations"]
edition = "2021"
keywords = ["messagepack", "msgpack"]
license = "MIT/Apache-2.0"
readme = "README.md"
repository = "https://github.com/codx-dev/msgpacker"
description = "Derive macros for the MessagePack protocol implementation for Rust."

[lib]
proc-macro = true

[dependencies]
quote = "1.0"
syn = { version = "2.0", features = ["full"] }
