[package]
name = "msgpacker-derive"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
categories = ["compression", "encoding", "parser-implementations"]
keywords = ["messagepack", "msgpack"]
readme = "README.md"
description = "Derive macros for the MessagePack protocol implementation for Rust."

[lib]
proc-macro = true

[dependencies]
quote = "1.0"
syn = { version = "2.0", features = ["full"] }
