[package]
name = "msgpacker"
version = "0.3.1"
authors = ["Victor Lopez <victor@codx.io>"]
categories = ["compression", "encoding", "parser-implementations"]
edition = "2021"
keywords = ["messagepack", "msgpack"]
license = "MIT/Apache-2.0"
readme = "README.md"
repository = "https://github.com/codx-dev/msgpacker"
description = "MessagePack protocol implementation for Rust."

[dependencies]
msgpacker-derive = { version = "0.1", optional = true }

[features]
default = ["derive", "impl-io"]
derive = ["msgpacker-derive"]
impl-io = []
