[package]
name = "msgpacker"
version = "0.4.1"
authors = ["Victor Lopez <victor@codx.io>"]
categories = ["compression", "encoding", "parser-implementations"]
edition = "2021"
keywords = ["messagepack", "msgpack"]
license = "MIT/Apache-2.0"
readme = "README.md"
repository = "https://github.com/codx-dev/msgpacker"
description = "MessagePack protocol implementation for Rust."

[dependencies]
msgpacker-derive = { version = "0.3", optional = true }

[dev-dependencies]
proptest = "1.2"
proptest-derive = "0.3"

[features]
default = ["std", "derive"]
alloc = []
derive = ["msgpacker-derive"]
strict = []
std = ["alloc"]

[[test]]
name = "collections"
required-features = ["derive"]
