[package]
name = "msgpacker"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
categories = ["compression", "encoding", "parser-implementations"]
keywords = ["messagepack", "msgpack"]
readme = "README.md"
description = "MessagePack protocol implementation for Rust."

[dependencies]
msgpacker-derive = { version = "0.5", path = "../msgpacker-derive", optional = true }
serde = { version = "1.0", default-features = false, optional = true }

[dev-dependencies]
arbitrary = "1.4"
arbitrary-json = "0.1"
msgpacker-derive.path = "../msgpacker-derive"
proptest = "1.10"
proptest-derive = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_bytes = "0.11"
serde_json = "1.0"

[features]
default = ["derive", "std", "serde"]
alloc = ["serde?/alloc"]
derive = ["msgpacker-derive"]
strict = []
std = ["alloc", "serde?/std"]

[[test]]
name = "collections"
required-features = ["derive"]

[[test]]
name = "serde"
required-features = ["alloc", "derive", "serde"]
